fix the overflowing bug again

--- a/public/stylesheets/scss/style.scss
+++ b/public/stylesheets/scss/style.scss
@@ -6,7 +6,6 @@
     clear: both;
     margin-top: 20px;
     padding: 15px;
-    padding-left: 30px;
     display: inline-block;
     width: 27em;
     height: 400px;
